index.css
/* CSS Document */
/* montserrat-regular - latin */
@font-face {
	font-family: 'Montserrat';
	font-style: normal;
	font-weight: 400;
	src: local(''),
		 url('fonts/montserrat-v15-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
		 url('fonts/montserrat-v15-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }
  
  /* montserrat-600 - latin */
  @font-face {
	font-family: 'Montserrat';
	font-style: normal;
	font-weight: 600;
	src: local(''),
		 url('fonts/montserrat-v15-latin-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
		 url('fonts/montserrat-v15-latin-600.woff') format('woff');   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
  }

html {
	scroll-behavior: smooth;
}

body {
	background-color: #121414;
	overflow-x: hidden;
	overflow-y: scroll;
}

h1 {
	text-align: center;
	margin: 0;
}

#logo {
	position: fixed;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	transform-origin: left top;
	width: 50%;
	transition: left 1s, top 1s, width 1s, opacity 300ms;
}

#logo_disapear {
	opacity: 100%;
	transition: all 0.4s ;
}

#logo_H {
	transition: all 1s;
}

#scroll_arrows {
	position: fixed;
	left: 50%;
	bottom: 5%;
	transform: translate(-50%, 0%);
	transform-origin: center;
	width: 50px;
	transition: all 0.5s;
}

#scroll_arrows:hover {
	cursor: pointer;
	transform: translate(-50%, 0%) scale(120%);
}

#about {
	position: fixed;
	left: -30px;
	bottom: 50px;
	transform: rotate(-90deg) translate(0, 100%);
	font-family: 'Montserrat', serif;
	font-weight: 600;
	font-size: 20px;
	color: #BA1A1A;
	background-image: linear-gradient( #BA1A1A, #BA1A1A);
	transition: transform 1s, left 1s, bottom 1s, font-size 1s, background-size 500ms;
}

#about_text {
	visibility: hidden;
	font-family: 'Montserrat', serif;
	font-weight: normal;
	font-size: 20px;
	color: #E3E5E5;
	position: fixed;
	padding-bottom: 64px;
	top: 100%;
	left: 50%;
	transform: translateX(-50%);
	width: 50%;
	text-align: justify;
	transition: all 1s;
}

#youtube {
	right: 70%;
}

#instagram {
	right: 50%;
}

#instagram_content {
	visibility: hidden;
}

#github {
	right: 30%;
}

#github_content {
	width: 65%;
	display: grid;
	gap: 30px;
	grid-template: repeat(4, 1fr) / repeat(3, 1fr);
	grid-auto-flow: row dense;
}

.video {
	margin: 32px;
	width: calc(33% - 64px);
	height: 12vw;
	box-shadow: 0px 0px 20px #000000;
}

.image {
	transform: translateY(50%);
	margin: 32px;
	width: calc(33% - 64px);
	box-shadow: 0px 0px 100px #000000;
	opacity: 1;
	transition: opacity 500ms, box-shadow 500ms;
}

.image:hover {
	opacity: 0.8;
	box-shadow: 0px 0px 100px #1d1d1d;
}

.github_card {
	overflow: hidden;
	/*width: calc(33% - 64px);*/
	width: 100%;
	background-color: #ffffff02;
	box-shadow: 0px 0px 20px #000000;
	border-radius: 25px;
	transition: box-shadow 500ms;
}

.github_card:hover {
	box-shadow: 0px 0px 40px #121414;
}

.github_card_image {
	border-radius: 25px;
	width: 100%;
}

.github_card_title {
	text-align: center;
	margin: 20px;
	font-family: 'Montserrat', serif;
	color: #E3E5E5;
	text-decoration: none;
}

.github_card_description {
	font-family: 'Montserrat', serif;
	color: #E3E5E5;
	font-weight: normal;
	margin: 20px;
	text-decoration: none;
}

.content {
	position: fixed;
	width: 80%;
	top: 100%;
	left: 50%;
	padding-bottom: 64px;
	transition: top 1s;
	transform: translateX(-50%)
}

.animated_underline {
	background-size: 0 3px;
	background-position: 0 100%;
	background-repeat: no-repeat;
	transition: background-size 500ms;
}

.animated_underline:hover {
	cursor: pointer;
	background-size: 100% 3px;
}

.social_media {
	display: flex;
	flex-direction:row;
	align-items: center;
	visibility: hidden;
	position: fixed;
	top: 110%;
	transform: translate(calc(50% + 23px), -50%);
	transition: right 1s, top 1s, transform 1s, opacity 300ms;
	
}

.social_media_text {
	font-family: 'Montserrat', serif;
	font-weight: 600;
	font-size: 30px;
	color: #E8911A;
	transition: font-size 1s, background-size 500ms;
	background-image: linear-gradient( #E8911A, #E8911A);
}

.link_arrow_container {
	display: flex;
}

.link_arrow {
	margin-left: 10px;
	height: 36px;
	transform: translateX(0);
	opacity: 0;
	transition: transform 1s, opacity 1s;
}

.link_arrow:hover {
	cursor: pointer;
	transform: translateX(10px);
	
}

.unselectable {
	-webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
	user-select: none;
}

.link {
	color: #E8911A;
	background-image: linear-gradient( #E8911A, #E8911A);
	text-decoration: none;
}

@media screen and (max-width: 780px){
	#logo {
		width: 80%;
	}

	#about_text {
		width: 70%;
	}

	#youtube_content {
		width: 70%;
	}

	#instagram_content {
		transform: none;
		width: 70%;
		padding-bottom: 55vw;
	}

	#github_content {
		width: 70%;
		grid-template: repeat(4, 1fr) / repeat(1, 1fr);
	}

	.video {
		margin-left: 0;
		margin-right: 0;
		width: 100%;
		height: 38vw;
	}

	.image {
		transform: none;
		margin-left: 0;
		margin-right: 0;
		width: 100%;
		transition: transform 500ms;
	}
}

@media screen and (max-width: 1000px) {
	#youtube {
		right: 50%;
	}

	#instagram {
		right: 50%;
	}

	#github {
		right: 50%;
	}
}

@media screen and (min-width: 780px) and (max-width: 1450px) {
	.video {
		width: calc(49% - 64px);
		height: 18vw;
	}

	.image {
		width: calc(49% - 64px);
	}

	#instagram_content {
		padding-bottom: 28vw;
	}

	#github_content {
		grid-template: repeat(4, 1fr) / repeat(2, 1fr);
	}
}

